<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 OPPO.  All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~ File: - content_main.xml
  ~ Description:
  ~     N/A
  ~
  ~ Version: 1.0.0
  ~ Date: 2021-04-09
  ~ Owner: Jero Yang
  ~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ Revision History ~~~~~~~~~~~~~~~~~~~~~~~
  ~ <author>             <date>           <version>              <desc>
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Jero Yang           2021-04-09           1.0.0         project init
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/gesture_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.oplus.ocs.settingmenupanel.SettingMenuPanel
        android:id="@+id/top_feature_view"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:layout_marginTop="25dp" />

    <com.oplus.ocs.featurepanel.FeaturePanelView
        android:id="@+id/right_feature_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp" />

    <com.oplus.ocs.cameraunit.ui.VideoTimeView
        android:id="@+id/video_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="100dp" />

    <com.oplus.ocs.cameraunit.ui.ZoomView
        android:id="@+id/zoom_change_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="200dp" />

    <com.oplus.ocs.cameraunit.ui.BlurProgressView
        android:id="@+id/blur_progress_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="200dp"
        android:visibility="gone" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="94dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/thumbnail"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/thumbnail"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="1dp" />

        <com.oplus.ocs.cameraunit.ui.CameraButtonView
            android:id="@+id/camera_button"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="bottom|center" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/video_control"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/pic_video_record_pause"
            android:visibility="gone" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="6dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                fab:fab_label="@string/camera_name_rear_main"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mode_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/navigation_bar_height"
        android:background="@android:color/transparent"
        app:tabBackground="@android:color/transparent"
        app:tabIndicatorHeight="1dp"
        app:tabMode="auto"
        app:tabRippleColor="@android:color/transparent"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_normal_video" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_normal_capture" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_normal_preview" />

    </com.google.android.material.tabs.TabLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>